data/derived/comb/progs/unify/prog2866.ml.out
Characters 62-75:
  |h::t -> h:: [listReverse t];;
                ^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
